--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,15 +1,7 @@
 /* Media queries */
-@media (max-width: 1160) {
-  .container{
-    width: 100%;
-  }
-}
-
 
 /* Tablet 768px */
-@media (max-width: 768px) {
-  
-}
+@media (max-width: 768px) {}
 
 /* Mobile 480px */
 @media (max-width: 480px) {
@@ -20,4 +12,5 @@
   .why-us {
     background-color: black;
   }
+    
 }
