--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,16 +1,32 @@
 /* Media queries */
 
-/* Tablet 768px */
-@media (max-width: 768px) {}
+.container {
+  width: 100%;
+
+}
 
 /* Mobile 480px */
 @media (max-width: 480px) {
-  .container .col {
+
+  .lessons .col,
+  .steps .col,
+  .why-us .col {
     width: 100%;
+  }
+
+  .row {
+    
+    gap: 60px;
+  }
+
+  .steps {
+    margin-bottom: 0;
   }
 
   .why-us {
     background-color: black;
+    padding: 3rem 0;
+    margin-bottom: 0;
   }
-    
 }
+
